# balanced-soroban-contracts

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-test-soroban-contracts.yml  release.yml  soroban-codecov.yml
asset_manager/: Cargo.toml
asset_manager/src/: contract.rs  lib.rs  storage_types.rs  test.rs
balanced_dollar/: Cargo.toml
balanced_dollar/src/: BalancedDollarCrossChain.rs  contract.rs  lib.rs  states.rs  storage_types.rs  test.rs
contracts/asset_manager/: Cargo.toml
contracts/asset_manager/src/: admin.rs  config.rs  contract.rs  errors.rs  lib.rs  states.rs  storage_types.rs  test.rs  xcall_manager_interface.rs
contracts/asset_manager_int/: Cargo.toml
contracts/asset_manager_int/src/: config.rs  contract.rs  errors.rs  states.rs  storage_types.rs
contracts/balanced_dollar/: Cargo.toml
contracts/balanced_dollar/src/: balanced_dollar.rs  contract.rs  lib.rs  storage_types.rs
contracts/balanced_doller/: Cargo.toml
contracts/balanced_doller/src/: balanced_dollar.rs  config.rs  contract.rs  errors.rs  lib.rs  states.rs  storage_types.rs  test.rs  xcall_manager_interface.rs
contracts/balanced_token/: Cargo.toml
contracts/sicx/: Cargo.toml
contracts/sicx/src/: lib.rs
contracts/spoke_token/: Cargo.toml
contracts/xcall_manager/: Cargo.toml
libs/spoke_token/: Cargo.toml
script/: optimize-stellar.sh
scripts/: optimize-stellar.sh
wasm/: centralized_connection.wasm  xcall.wasm
xcall/: Cargo.toml
xcall/src/: lib.rs
xcall_manager/: Cargo.toml
xcall_manager/src/: contract.rs  lib.rs  storage_types.rs
(+57 files in other folders)
