[package]
name = "sicx"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk =  { workspace = true }
soroban-token-sdk = { version = "21.6.0" }
spoke-token = { path = "../../libs/spoke_token" }


[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }